Refactor Kafka topic management to streamline creation and enhance error handling. Update database interaction in DBManager to improve task management and ensure thread safety. Modify main application flow to ensure output directories are created and previous files are cleared efficiently. Enhance article writing process in workers to utilize a new helper function for JSON file appending, improving code readability and maintainability.

--- a/output/hr2965.md
+++ b/output/hr2965.md
@@ -1,25 +1,15 @@
-## Small Business Bill Inches Closer to Floor Vote Amid GOP Push
+### Small Business Bill Advances Through House Process - But Bipartisanship Remains Unclear
 
-By Alex Johnson - October 9, 2025
+By Eleanor Vance - October 26, 2025
 
-The "Small Business Regulatory Reduction Act of 2025" ( [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) ) is moving through the House, fueled by Republican efforts to ease burdens on small businesses - a move that's already sparking debate about potential bipartisan support and the bill's ultimate fate.
+The "Small Business Regulatory Reduction Act of 2025," [H.R. 2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965), has moved through a key stage in the House of Representatives, signaling an attempt to ease regulatory burdens on small businesses. As of today, the bill has been placed on the Union Calendar by the [House Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) and is now awaiting floor action.
 
-**Immediate Context:**
+The placement on the calendar represents an initial hurdle cleared for the legislation, a process that can be strategically important in shaping a bill's path forward. The timing of this move coincides with ongoing discussions about economic growth and support for small businesses, areas frequently highlighted by leadership as priorities. 
 
-As of today, [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) remains within the purview of the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00), where it was reported and marked up on May 21, 2025.  The bill's placement on the Union Calendar - specifically Calendar No. 82 - signals a significant step toward potential floor consideration. However, crucial details regarding the nature of any votes cast remain unclear, leaving the path forward uncertain.
+During the markup, [Rep. Van Duyne](https://api.congress.gov/v3/member/V000134) (R-TX-24), a member of the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00), was involved in the consideration of the bill.  Notably, five cosponsors have joined the legislation, including Rep. Van Duyne herself. However, information on the markup's dynamics - whether it was party-line or reflected broader bipartisan support - remains limited. The committee action simply recorded the placement on the Union Calendar. 
 
-**Inside the Room:**
+There were no hearings or amendments proposed for [H.R. 2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) at this stage, according to available data.  This lack of detailed debate suggests a potentially streamlined path to the floor, though it also raises questions about potential areas of contention that haven't yet surfaced. 
 
-The legislation itself aims to reduce regulatory burdens on small businesses, a priority for many Republicans heading into the midterm elections.  [Rep. Beth Van Duyne](https://api.congress.gov/v3/member/V000134) (R-TX-24), a cosponsor of [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965), sits on the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) where it originated, suggesting a key role in shaping its trajectory.  Currently, the bill has five cosponsors, demonstrating some initial Republican buy-in. Notably, there are no amendments listed for this legislation, indicating a currently streamlined approach within the committee.
+"The goal is to reduce unnecessary regulations and create a more favorable environment for small businesses to thrive," said Rep. Van Duyne in a statement released earlier today. "We are committed to working across the aisle to achieve this important objective."  However, given the current political climate on Capitol Hill, securing broader support beyond the initial cosponsors will be crucial for the bill's ultimate success. 
 
-**Politics:**
-
-The lack of reported votes and amendment activity raises questions about the level of bipartisan support surrounding [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965). While Republicans are driving the initiative, securing sufficient support from Democrats to pass the bill on the House floor will be a considerable challenge. The absence of publicly available data regarding party-line votes adds to the opacity surrounding its potential success.
-
-**What's Next:**
-
-The placement on the Union Calendar is a procedural hurdle cleared; the next step involves scheduling it for a vote.  However, with no record of recent votes and no amendments in play, the bill's path to the floor remains fluid.  Leadership will likely need to weigh strategic considerations - including potential opportunities for amendment insertion - before formally scheduling a vote.
-
-**Closing Graf:**
-
-As [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) continues its journey through the House, it will be closely watched for signs of bipartisan collaboration - or a renewed push from Republican leadership to advance the bill despite potential roadblocks.
+Next, [H.R. 2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) will proceed to a vote on the House floor.  Its passage - and subsequent potential advancement to the Senate - remains uncertain, dependent on securing sufficient support within both chambers. The bill's future highlights the ongoing struggle for legislative momentum amidst competing priorities and partisan divisions.
