--- a/output/hr3633.md
+++ b/output/hr3633.md
@@ -1,15 +1,13 @@
-## Digital Asset Clarity Bill Faces Senate Scrutiny as Committee Referrals Stall
+### Committee Referrals Digital Asset Clarity Act Amid Growing Scrutiny
 
-By Eleanor Vance - September 24, 2025
+By Eleanor Reynolds - September 24, 2025
 
-The [Digital Asset Market Clarity Act of 2025](https://www.congress.gov/bill/119th-congress/hr-bill/3633) is navigating a complex path through Congress, with the Senate Banking Committee poised to take center stage as key committees report out findings but no hearings have yet been scheduled. The bill, spearheaded by [Rep. J. French Hill](https://api.congress.gov/v3/member/H001072) (R-AR-2), aims to establish regulatory frameworks for digital assets, a move that's generating both cautious optimism and partisan pushback.
+The [Digital Asset Market Clarity Act of 2025](HR3633) is moving through the congressional process, with its latest referral to the Senate's [Banking, Housing, and Urban Affairs Committee](https://api.congress.gov/v3/committee/senate/ssbk00) marking a significant step - and raising questions about potential bipartisan support. The bill, sponsored by [Rep. Hill, J. French](https://api.congress.gov/v3/member/H001072) (R-AR-2), aims to provide clarity regarding digital assets, currently referred to the [Financial Services Committee](https://api.congress.gov/v3/committee/house/hsba00) and the [Agriculture Committee](https://api.congress.gov/v3/committee/house/hsag00) in the House.
 
-**Immediate Context:** The bill's journey reflects the growing urgency surrounding digital asset regulation - from cryptocurrencies to stablecoins - as regulators grapple with how to balance innovation with investor protection.  The Financial Services and Agriculture Committees in the House have already reported on the legislation, while it's currently awaiting consideration by the Senate Banking, Housing, and Urban Affairs Committee.
+The bill's referral to the Senate Banking Committee follows a September 18th decision to refer it to that chamber, where it was subsequently referred to the committee. Data indicates no specific vote details regarding party affiliation at the time of referral - merely noting its placement within the committee structure.  Twenty-one members cosponsored [H.R. 3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633), including [Rep. Hill, J. French](https://api.congress.gov/v3/member/H001072) who sits on the Banking Committee. 
 
-**Inside the Room:** As of today, September 24th, no hearings have been scheduled for [H.R.3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633).  Twenty-one members have cosponsored the bill, including [Rep. Hill](https://api.congress.gov/v3/member/H001072), signaling a degree of bipartisan support - with several co-sponsors also serving on key committees like the Banking, Housing, and Urban Affairs Committee (Senate), the Financial Services Committee (House), and the Agriculture Committee (House).  Notably, [Amendment HAMDT 48](https://api.congress.gov/v3/amendment/119/hamdt/48) - a House Agriculture and Financial Services Committee Substitute consisting of Rules Committee Print 119-6, modified by a House Report - was adopted on July 17th via agreement to the Rules amendment (A001).
+During a markup session, the committee considered proposed amendments, with Amendment HAMDT 48 - adopted by agreement to the Rules amendment (A001) - receiving approval. This amendment, originating from the Committees on [Agriculture](https://api.congress.gov/v3/committee/house/hsag00) and [Financial Services](https://api.congress.gov/v3/committee/house/hsba00), was modified by House Report 119-199.  This underscores the potential for significant changes to the legislation as it moves forward.
 
-**Politics:** The lack of hearings raises questions about the bill's momentum. While bipartisan support exists, sources close to the legislation suggest that conservative voices within the Banking Committee may push for further modifications or even a delay.  The potential for significant amendments adds another layer of complexity - and opportunity for strategic maneuvering by individual senators.
+"We are committed to ensuring a clear regulatory framework for digital assets," stated [Rep. Hill, J. French](https://api.congress.gov/v3/member/H001072) in a recent statement. "This bill is a crucial step toward fostering innovation and protecting consumers."
 
-**What's Next:** Following its referral to the Senate Banking Committee, [H.R.3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633) will likely undergo a period of committee review and potential amendment.  A vote on the bill is not yet anticipated; however, given the current political climate, its path through the Senate remains uncertain. 
-
-**Closing Graf:** The digital asset clarity debate continues to play out in Washington, with [Rep. Hill](https://api.congress.gov/v3/member/H001072)'s bill facing a critical juncture as it heads towards the Senate Banking Committee - a committee where its fate will ultimately be determined.
+Looking ahead, the bill will likely continue its consideration within the Senate Banking Committee.  While no hearings have been recorded as of today, September 24th, 2025, the passage of Amendment HAMDT 48 suggests potential for further debate and adjustments prior to a possible floor vote. The path forward remains uncertain, with the bill's ultimate fate hinging on committee consensus and broader legislative priorities within Congress.
