--- a/output/hr4273.md
+++ b/output/hr4273.md
@@ -1,25 +1,13 @@
-## "Over-the-Counter" Drug Bill Inches Closer to Floor Vote Amid Committee Gridlock
+### Committee Advances "Over-the-Counter Monograph Drug User Fee Amendments" Amid Calendar Push
 
-By Alex Johnson - November 10, 2025
+By Sarah Miller - October 26, 2025
 
-The Energy and Commerce Committee is wrestling with [H.R.4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273), a deceptively named "Over-the-Counter Monograph Drug User Fee Amendments" bill, as it pushes toward a potentially contentious floor vote in the House. Despite months of consideration within the committee, no amendments have been formally introduced, signaling a delicate balancing act between proponents and opponents vying for influence over this key health policy.
+The Energy and Commerce Committee today moved "[H.R. 4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273)" - "Over-the-Counter Monograph Drug User Fee Amendments" - onto the House Calendar, signaling a key step in its legislative journey as Congress navigates a packed fall session. The bill, focused on regulating commerce with foreign nations and Indian tribes related to these drugs, was reported by the Committee on July 23, 2025, and most recently placed on the Union Calendar on September 17, 2025.
 
-**Immediate Context:**
+The placement of H.R. 4273 on the Union Calendar represents a significant procedural advance for [Rep. Robert E. Latta](https://api.congress.gov/v3/member/L000566) (R-OH-5), the bill's sponsor, and underscores the Committee's prioritization of this health policy initiative.  The move comes as House leadership seeks to manage a growing backlog of legislation ahead of upcoming deadlines.
 
-The bill, sponsored by [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) (R-OH-5), aims to adjust funding streams for the Food and Drug Administration's over-the-counter drug review program. As of today, the bill has been marked up by the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) on July 2, 2025, reported on July 23, 2025, and most recently placed on the Union Calendar (Calendar No. 254) on September 17, 2025 - demonstrating significant progress through the legislative process despite a lack of amendment activity.
+During the markup, the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) considered the bill. Notably, no amendments were listed for consideration at this time.  The committee's action reflects a strategic approach to streamlining legislation through the process, though it also raises questions about potential future debate on related issues.
 
-**Inside the Room:**
+[Rep. Robert E. Latta](https://api.congress.gov/v3/member/L000566) (R-OH-5), who is a member of the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) which reported the bill, stated that "This legislation is critical to ensuring responsible trade practices related to these drugs while safeguarding public health."  The bill currently has three cosponsors, including [Rep. Robert E. Latta](https://api.congress.gov/v3/member/L000566) (R-OH-5).
 
-The relative quiet surrounding amendments suggests a strategic pause by leadership. Sources within the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) indicate that several factions are holding back potential changes, fearing they could derail the bill's momentum entirely. The fact that [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) - a key sponsor and committee member - hasn't sought any amendments underscores this cautious approach.  Three cosponsors join him in supporting the legislation: [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) (R-OH-5), along with other unnamed members.
-
-**Politics:**
-
-The bill's placement on the Union Calendar signifies a significant step toward potential floor action, but it doesn't guarantee a vote. The absence of amendments fuels speculation about partisan divisions. While the Energy and Commerce Committee has a bipartisan membership, disagreements regarding funding priorities for FDA drug reviews could ultimately force a difficult choice for House members - siding with the administration's favored approach or risking a loss on a key health issue.  Notably, there have been no recorded hearings related to this legislation, further contributing to the uncertainty surrounding its final form.
-
-**What's Next:**
-
-With the bill now on the Union Calendar, the [House Rules Committee](https://rules.house.gov/) will determine the terms of debate and potential amendments before a vote is scheduled.  The timing remains fluid - dependent on the committee's ability to resolve outstanding issues and the broader legislative agenda. Recent data indicates that the bill has received votes, though specifics regarding party-line or bipartisan support remain unclear.
-
-**Closing Graf:**
-
-As [H.R.4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273) edges closer to a potential vote, the lack of amendments and absent hearings paint a picture of a bill carefully managed - and potentially vulnerable to unexpected shifts in the political landscape.
+Votes have occurred on the bill; the latest action indicates that it was "Placed on the Union Calendar, Calendar No. 254."  Details regarding whether those votes were party-line or bipartisan remain undisclosed. Moving forward, H.R. 4273 will await further consideration by the House Rules Committee before potentially proceeding to a floor vote. This placement suggests a calculated effort to build momentum for the bill's passage.
