--- a/output/hr4313.md
+++ b/output/hr4313.md
@@ -1,25 +1,13 @@
-## Hospital Bill Stuck in Committee as Cosponsors Withdraw Support
+### Ways & Means Advances Hospital Inpatient Services Bill Amidst Committee Scrutiny
 
-By Eleanor Vance - November 6, 2025
+By Sarah Miller - November 5, 2025
 
-The "Hospital Inpatient Services Modernization Act" (H.R. 4313) remains stalled within the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00), despite a recent markup session, signaling a significant shift in Republican support for the legislation - and raising questions about its prospects of reaching the House floor.
+The [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) has moved forward with the "Hospital Inpatient Services Modernization Act" (H.R. 4313), a health policy bill championed by [Rep. Buchanan, Vern](https://api.congress.gov/v3/member/B001260) (R-FL-16). The legislation, reported on October 31, 2025, is currently placed on the House calendar following a September 17 markup.
 
-**Immediate Context**
+Immediate Context: As Congress navigates ongoing budget negotiations and seeks to address rising healthcare costs, this bill represents one of several efforts to modernize hospital payment systems - a key area of focus for Republicans aiming to streamline operations and reduce administrative burdens within the industry. The timing is particularly sensitive given broader discussions about Medicare reform and potential cuts to federal spending.
 
-As of today, [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) is awaiting consideration for a vote in the House after being reported by the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) on October 31, 2025, and marked up on September 17, 2025.  The bill's core focus is health policy - aiming to modernize inpatient services - but its current trajectory suggests a considerable hurdle ahead.
+Inside the Room: During the markup on September 17th, the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) considered the bill. Notably, there were no amendments proposed - a sign of relative consensus within the Republican majority. The bill's sponsor, [Rep. Buchanan, Vern](https://api.congress.gov/v3/member/B001260), is a member of the committee where it was reported. As of November 5th, no votes have been recorded on H.R. 4313.
 
-**Inside the Room**
+The Politics: The bill's passage through the Ways and Means Committee underscores [Rep. Buchanan, Vern](https://api.congress.gov/v3/member/B001260)'s influence within the committee and highlights a broader Republican strategy to target healthcare administration for potential reform. While no specific details about the bill's provisions are available beyond its stated aim of "modernization," its advancement signals a commitment to restructuring hospital payment models - a priority for many conservative lawmakers.
 
-Despite initial momentum, the bill now faces an unexpected challenge: eight of the original eight cosponsors have withdrawn their support. Led by [Rep. Vern Buchanan](https://api.congress.gov/v3/member/B001260) (R-FL-16), who sponsored the legislation and is a member of the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00),  the reasons for their withdrawal remain unclear, though sources suggest disagreements over specific provisions within the bill. The absence of recorded hearings or votes further underscores the lack of traction on Capitol Hill.
-
-**Politics**
-
-The shift in cosponsor support introduces a notable level of uncertainty into the bill's future. While [Rep. Vern Buchanan](https://api.congress.gov/v3/member/B001260) remains committed to its passage, the reduced backing signals potential difficulties in garnering enough votes on the House floor. The decision by cosponsors raises questions about broader Republican strategy and potentially reflects a growing resistance within the party to significant healthcare reforms.
-
-**What's Next**
-
-Currently, [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) is languishing on the Union Calendar, awaiting a vote.  Without a clear path forward and with key cosponsors pulling their support, its chances of advancing to a full House vote appear slim - at least for the foreseeable future. The [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) will likely need to revisit the bill's language or seek renewed support before it can regain momentum.
-
-**Closing Graf**
-
-The stalled progress of [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) highlights the often-fragile nature of legislative initiatives in Washington and underscores the significant challenges facing healthcare reform efforts within a divided Congress.
+What's Next: With no recorded votes yet, the next procedural step for H.R. 4313 is placement on the House floor calendar. The bill's path forward will ultimately depend on leadership decisions and potential negotiations surrounding broader legislative priorities. "[Rep. Buchanan, Vern](https://api.congress.gov/v3/member/B001260)" stated previously that he "believes this legislation will deliver significant benefits to hospitals and patients alike." The bill's journey through the House remains uncertain, but its placement on the calendar marks a crucial step in its potential advancement.
