--- a/output/hr5345.md
+++ b/output/hr5345.md
@@ -1,15 +1,13 @@
-## Kustoff Bill Aims to Sharpen Social Security's Response to Identity Theft
+### Ways & Means Advances Social Security Identity Theft Bill - But Details Remain Murky
 
-By Sarah Miller - November 2, 2025
+By Sarah Miller - October 31, 2025
 
-The House is considering legislation aimed at bolstering Social Security's ability to combat the growing threat of identity theft targeting beneficiaries. The "Improving Social Security's Service to Victims of Identity Theft Act," spearheaded by [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392), is currently navigating the complex machinery of the Ways and Means Committee, signaling a potential area of focus for Republican priorities heading into the fall legislative schedule.
+The [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) today advanced the "Improving Social Security's Service to Victims of Identity Theft Act," a measure aimed at bolstering the agency's response to fraud targeting beneficiaries. The bill, introduced by [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392) (R-TN-8), is now positioned on the House Calendar as Calendar No. 312 - a significant step toward potential floor action but one shrouded in procedural ambiguity.
 
-**Immediate Context:** The bill's introduction underscores concerns about the vulnerability of Social Security recipients to fraud and identity theft - a problem that has seen increasing attention from lawmakers and consumer advocacy groups.  The legislation seeks to streamline processes and improve communication between Social Security Administration (SSA) officials and victims, offering a tangible response to a persistent challenge.
+The bill's advancement underscores the growing concern surrounding identity theft impacting Social Security recipients, a vulnerability highlighted by recent reports.  Timing is crucial as lawmakers grapple with broader budget negotiations and seek to address rising costs within the [Social Security Administration](https://www.ssa.gov/). 
 
-**Inside the Room:** The bill, formally designated [H.R.5345](https://www.congress.gov/bill/119th-congress/hr-bill/5345), was reported by the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) on September 17, 2025, marking a significant step in its legislative journey. It subsequently received a markup on September 15, 2025, and was placed on the Union Calendar (Calendar No. 312) as of October 31, 2025 - demonstrating momentum within the House.  Notably, [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392), a cosponsor and member of the committee driving this effort, has positioned himself at the center of this initiative.
+During the markup, the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) considered the legislation. Notably, no amendments were offered - a decision that suggests a lack of immediate partisan disagreement on the core provisions, though the absence of specific vote tallies raises questions about the procedural path forward.  The bill was reported out by the committee on September 15, 2025, and placed on the Union Calendar on October 31, 2025.
 
-**Politics:** The bill's current lack of hearings or amendments suggests a deliberate strategy by its sponsor - focused on building consensus within the Ways and Means Committee and avoiding potential roadblocks early in the process. While no formal votes have been recorded yet, the placement on the Union Calendar indicates a degree of support from leadership.  The bipartisan nature of this effort remains unclear at this stage; however, [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392)'s involvement within the committee suggests potential for broader backing.
+"[Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392) (R-TN-8)," a member of the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00), sponsored the bill alongside [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392) (R-TN-8).  The legislation's placement on the Union Calendar signals a willingness to move it towards potential floor consideration - though its ultimate fate hinges on broader legislative priorities and strategic maneuvering within both parties. 
 
-**What's Next:** The bill's progression through the calendar will determine its path to a floor vote.  Its placement on Calendar No. 312 signifies that it is awaiting consideration by the full House - a crucial juncture where further debate and possible amendments could reshape its final form.  The timing of any potential vote remains uncertain, contingent on committee scheduling and overall legislative priorities.
-
-**Closing Graf:** As Congress grapples with budgetary pressures and competing demands for attention, [H.R.5345](https://www.congress.gov/bill/119th-congress/hr-bill/5345) represents a targeted effort to address a specific vulnerability within the Social Security system - a move that could provide valuable protections for millions of beneficiaries and highlight the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00)'s commitment to safeguarding taxpayer dollars.
+Next, the bill will await action by the House Rules Committee before potentially moving to a vote on the House floor. The path forward remains unclear regarding whether this legislation will proceed as a party-line effort or if bipartisan support can be secured.
