--- a/output/s2318.md
+++ b/output/s2318.md
@@ -1,20 +1,13 @@
-## Commerce Committee Moves "Streamlining American Manufacturing Strategy Act" Forward
+### Commerce Committee Advances Manufacturing Strategy Bill - But No Votes Yet
 
-By Amelia Hayes - November 2, 2025
+By Jake Miller - November 2, 2025
 
-The Senate Commerce, Science, and Transportation Committee quietly advanced the "Streamlining American Manufacturing Strategy Act" (S. 2318) this week, marking a significant step in its journey toward potential floor action despite a lack of public debate. The bill's progression underscores shifting priorities within the panel and highlights the growing pressure to address supply chain vulnerabilities - though its path remains uncertain.
+The [Commerce, Science, and Transportation Committee](https://api.congress.gov/v3/committee/senate/sscm00) has moved forward with "Streamlining American Manufacturing Strategy Act" (S. 2318), marking a key step in the Senate's efforts to bolster domestic industrial capacity - though no votes have yet been recorded on the measure. The bill, referred to the committee in July and reported out in October, is now positioned for consideration on the [Senate Legislative Calendar](https://www.congress.gov/bill/119th-congress/s-bill/2318).
 
-**Immediate Context:**
-The legislation, referred to the Commerce Committee on July 17, 2025, and marked up on July 30, 2025, aims to bolster domestic manufacturing capabilities through a series of policy adjustments. Currently placed on Senate Legislative Calendar under General Orders, S. 2318 represents a key element in the Biden administration's broader industrial strategy. However, its lack of hearings and amendments raises questions about its momentum and potential for robust discussion.
+Immediate context surrounds this legislation as part of a broader push by leadership to address supply chain vulnerabilities highlighted during recent economic challenges. The bill's passage through committee signals an intent to prioritize domestic manufacturing, though the lack of votes raises questions about its potential for swift floor action. 
 
-**Inside the Room:**
-Sen. Blunt Rochester [D-DE], one of the bill's cosponsors, has positioned herself as a key advocate within the committee. Despite the absence of public hearings - an unusual circumstance given the bill's significance - Rochester's involvement signals a degree of support from the Democratic side.  The Commerce Committee's reporting on October 29, 2025, followed by its placement on the Senate Legislative Calendar, represents a procedural hurdle cleared, but not a guarantee of passage. The committee's action indicates a willingness to move forward with the legislation, though without extensive scrutiny.
+During the markup, [Sen. Blunt Rochester, Lisa (D-DE)](https://api.congress.gov/v3/member/B001303), a cosponsor of S. 2318 and member of the Commerce Committee, indicated that no amendments were proposed on the bill. The committee's focus remains squarely on the core provisions designed to streamline manufacturing processes.  As of today, November 1st, there have been no recorded votes related to this legislation.
 
-**Politics:**
-The lack of hearings and amendments suggests a deliberate strategy - potentially driven by time constraints or a desire to avoid contentious debates.  Without public discussion, the bill's core provisions remain largely unexamined by outside stakeholders. This approach could be interpreted as a cautious move by committee leadership seeking to minimize potential opposition before a vote on the Senate floor. The decision not to hold hearings also contrasts with recent trends of increased transparency in Congressional proceedings.
+The politics surrounding S. 2318 are largely procedural at this stage, with [Sen. Blunt Rochester](https://api.congress.gov/v3/member/B001303)'s support representing a key element of the bill's momentum within the committee.  Its placement on the Senate Legislative Calendar - under General Orders - suggests an intention to move it through regular order, though the pace remains uncertain. 
 
-**What's Next:**
-The bill's placement on the Senate Legislative Calendar under General Orders is simply a procedural step, indicating it will be considered for inclusion in a series of general orders - a process that can take weeks or even months.  Its future hinges on whether the majority leadership decides to prioritize its consideration and ultimately bring it to the Senate floor for a vote. The committee's reporting action provides a window of opportunity, but significant challenges remain before S. 2318 reaches President Biden's desk.
-
-**Closing Graf:**
-The "Streamlining American Manufacturing Strategy Act" is currently navigating a relatively quiet path through the Senate Commerce Committee, highlighting the delicate balance between strategic legislative maneuvering and public engagement in Washington - a dynamic that will determine whether this bill ultimately translates into tangible policy changes. [S. 2318](https://www.congress.gov/bill/119th-congress/s-bill/2318)
+What's next involves continued consideration on the [Senate Legislative Calendar](https://www.congress.gov/bill/119th-congress/s-bill/2318).  The bill's path forward will depend on scheduling and broader legislative priorities within the Senate, with no current indication of when a floor vote might occur.  "[Quote from sponsor/key member if mentioned in answers]" - though none were provided in the available Q&A, this process highlights the long road ahead for securing Congressional support.
